<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/widget_toolbar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include_toolbar"
        android:background="@color/white"
        android:layout_margin="@dimen/margin_standard">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Medio de Pago"
                android:id="@+id/medio_seleccionado_titulo"
                android:layout_margin="0dp"
                android:textColor="@color/grey_900"
                android:textSize="23dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:textColor="@color/grey_600"
                android:textSize="16sp"
                android:id="@+id/medio_seleccionado_detalle"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="0dp"
                android:layout_below="@+id/medio_seleccionado_titulo" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Medio Afiliado"
                android:id="@+id/medio_afiliado_titulo"
                android:textColor="@color/grey_900"
                android:textSize="23dp"
                android:layout_below="@+id/medio_seleccionado_detalle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:textColor="@color/grey_600"
                android:textSize="16sp"
                android:id="@+id/medio_afiliado_detalle"
                android:layout_margin="0dp"
                android:layout_below="@+id/medio_afiliado_titulo"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/factura_titulo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/numero_factura_info"
                android:textSize="23dp"
                android:layout_alignParentTop="false"
                android:textColor="@color/grey_900"
                android:layout_below="@+id/medio_afiliado_detalle"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/factura_detalle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_factura_detalle"
                android:textColor="@color/grey_600"
                android:textSize="16sp"
                android:layout_below="@+id/factura_titulo"
                android:layout_margin="0dp" />

            <TextView
                android:id="@+id/fecha_titulo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/fecha_factura_info"
                android:textSize="23dp"
                android:textColor="@color/grey_900"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/factura_detalle" />

            <TextView
                android:id="@+id/fecha_detalle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_factura_detalle"
                android:onClick="showTimePickerDialog"
                android:textColor="@color/grey_600"
                android:textSize="16sp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/fecha_titulo"
                android:layout_margin="0dp" />

            <TextView
                android:id="@+id/saldo_titulo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/saldo_factura_info"
                android:textSize="23dp"
                android:textColor="@color/grey_900"
                android:layout_below="@+id/fecha_detalle"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/saldo_detalle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/saldo_factura_detalle"
                android:textSize="16sp"
                android:textColor="@color/grey_600"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/saldo_titulo"
                android:layout_margin="0dp" />

            <TextView
                android:id="@+id/cuenta_titulo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/cuenta_factura_info"
                android:textSize="23dp"
                android:textColor="@color/grey_900"
                android:layout_below="@+id/saldo_detalle"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/cuenta_detalle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cuenta_factura_detalle"
                android:textColor="@color/grey_600"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textSize="16sp"
                android:layout_below="@+id/cuenta_titulo"
                android:layout_margin="0dp" />


            <Button
                android:id="@+id/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="160dp"
                android:background="@drawable/custom_button_ripple_green"
                android:onClick="irFinalizarTransaccion"
                android:text="@string/boton_datos_facturacion"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>