<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/titulo_medios"
        layout="@layout/widget_toolbar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo_medios"
        android:elevation="2dp"
        android:layout_margin="@dimen/margin_standard">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">


            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:id="@+id/finaliza_trx_card"
                android:src="@mipmap/checkcard"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_marginTop="90dp" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:id="@+id/finaliza_trx_check"
                android:src="@mipmap/check"
                android:layout_marginTop="50dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_finalizar_afiliacion_1"
                android:id="@+id/textView15"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/finaliza_trx_card"
                android:gravity="center_horizontal"
                android:textColor="@color/grey_800"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/mensaje_l_2"
                android:id="@+id/textView16"
                android:layout_below="@+id/textView15"
                android:layout_alignStart="@+id/textView15"
                android:gravity="center_horizontal"
                android:textColor="@color/grey_800"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="100dp"
                android:background="@drawable/custom_button_ripple_green"
                android:onClick="finalizarAfiliacionirLogin"
                android:textColor="#ffffff"
                android:text="@string/boton_finalizar"
                android:textSize="20sp" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>