<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/widget_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:minHeight="56dp" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include_toolbar"
        android:background="@color/white"
        android:layout_margin="@dimen/margin_standard">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/drawer_layout"
            android:layout_below="@+id/include_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycle_view_campo_servicio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:background="@color/white"
                android:fitsSystemWindows="true"
                android:layout_above="@+id/relativeLayout">

            </android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/button_action_service"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_button_ripple_indigo"
                android:onClick="ejecutaAccionOnClickActionService"
                android:text="@string/recargas_continuar"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:elevation="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_above="@+id/button_action_service"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:id="@+id/relativeLayout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/finaliza_trx_check"
                    android:src="@mipmap/check"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentTop="false"
                    android:baselineAlignBottom="false"
                    android:paddingLeft="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mensaje_l_1"
                    android:id="@+id/textView15"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:textColor="@color/grey_800"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_toRightOf="@+id/finaliza_trx_check"
                    android:layout_above="@+id/textView16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mensaje_l_2"
                    android:id="@+id/textView16"
                    android:gravity="center_horizontal"
                    android:textColor="@color/grey_800"
                    android:textSize="15sp"
                    android:layout_toRightOf="@+id/finaliza_trx_check"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>